# inheritance

./: CMakeLists.txt  ColorPed.h  chessboard.cpp  chessboard.h  factoryBuffer.cpp  factoryBuffer.h  main.cpp  pieces.cpp  pieces.h
test/: CMakeLists.txt  runAllTests.cpp  testCheckScacco.cpp  testConstructor.cpp  testConstructorChessboard.cpp  testConstructorPiece.cpp  testIsLegalMove.cpp
test/lib/googletest/: CMakeLists.txt
